--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 body {
   background: url('images/greenbike_copy2.png') no-repeat;
-  background-size: 1600px auto;
+  background-size: 1450px auto;
   margin: 0;
 }
 
@@ -16,8 +16,11 @@ body {
   margin-left: 25px;
 }
 
-.twitter-timeline {
+footer {
   float: left;
+  width: 150px;
+  height: auto;
+  margin-top: 90px;
 }
 
 /* p {
@@ -34,27 +37,40 @@ body {
 }
 
 .wordword {
-  margin-left: 600px;
+  margin-left: 560px;
   
 }
 
-.yourword {
-  font-size: 15px;
-  margin-top: 35px;
+.submit {
+  padding: 15px;
+  border-radius: 10px;
+
+
 }
 
-.submit {
-  padding: 10px;
-  background-color: yellow;
-  border-radius: 10px;
+.yourword {
+  width: 15%;
+  height: 5%;
+  font-size: 15px;
+  color: gray;
+  margin-top: 35px;
+  margin-left: 565px;
+  padding: 5px;
+
+}
+
+.background {
+  background-color: blue;
+
+
 }
 
 .wannaknow 
 {
   font-family: helvetica, sans-serif;
-  font-size: 30px;
-  margin-left: 500px;
-  margin-top: -20px;
+  font-size: 25px;
+  margin-left: 515px;
+  margin-top: 5px;
   color: white;
 }
 
