--- a/style.css
+++ b/style.css
@@ -1,14 +1,67 @@
-html {
-  color: white;
+* {
   margin: 0px;
   
 }
 
-body {
-  background: url('images/greenbike_copy2.png') no-repeat;
+html, body {
+  margin: 0px;
+  background-color: bisque;
+  height: 100%;
+}
+
+/* body {
+  background: url('images/greenbike_copy.png') no-repeat;
   background-size: 1450px auto;
   margin: 0;
+} */
+
+nav {
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  background-color: rgba (0, 0, 0, 5);
+  z-index: 99;
+  text-align: center;
 }
+
+.sect {
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.subsection {
+  height: 40%;
+  background-color: bisque;
+}
+
+.sectONE {
+  background-image: url('./images/oldschoolvan.png');
+}
+
+.sectTWO {
+  background-image: url('./images/greenbike_copy.png');
+}
+
+.sectTHREE {
+    background-image: url('./images/canl.png');
+}
+
+.sectFOUR {
+    background-image: url('./images/thailand.png');
+}
+
+nav a {
+  margin-left: 30px;
+  color: black;
+  padding: 10px;
+  background-color: blue;
+  text-decoration: none;
+  line-height: 50px;
+  
+}
+
 
 
 .logo {
@@ -16,12 +69,6 @@ body {
   margin-left: 25px;
 }
 
-footer {
-  float: left;
-  width: 150px;
-  height: auto;
-  margin-top: 90px;
-}
 
 /* p {
   color: white;
@@ -37,32 +84,33 @@ footer {
 }
 
 .wordword {
-  margin-left: 560px;
+  margin-top: 50px;
   
 }
 
-.submit {
-  padding: 15px;
-  border-radius: 10px;
-
-
+button {
+  color: green;
+  padding: 7px;
+  margin-left: 200px;
+  margin-top: 50px;
 }
 
 .yourword {
-  width: 15%;
-  height: 5%;
+  width: 10%;
+  height: 33px;
   font-size: 15px;
   color: gray;
-  margin-top: 35px;
-  margin-left: 565px;
+/*   margin-top: 35px;
+  margin-left: 465px; */
   padding: 5px;
-
+  position: fixed;
+  text-align: center;
+  margin-top: 50px;
+  
 }
 
 .background {
   background-color: blue;
-  
-
 
 }
 
@@ -75,9 +123,80 @@ footer {
   color: white;
 }
 
-@media screen and (min-width:1px) and (max-width:1900px) {
-    ...
+.specialword1 {
+  float: left;
+  margin: 20px;
+  margin-bottom: 20px;
+  font-size: 25px;
+  padding: 40px;
+  
 }
-@media screen and (min-width:1900px) {
-    ...
+
+footer {
+  text-align: center;
+  margin: 40px;
 }
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 2000px) {
+/* Styles */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 2000px) 
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 2000px) 
+and (orientation : portrait) {
+/* Styles */
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 2000px) {
+/* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 2000px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media only screen
+and (-webkit-min-device-pixel-ratio : 1.5),
+and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+}
+
+
